--- a/apps/devops-toolkit.yaml
+++ b/apps/devops-toolkit.yaml
@@ -17,5 +17,5 @@ spec:
     image:
       tag: 2.9.9
     ingress:
-      host: staging.devops-toolkit.172.30.60.194.xip.io
+      host: staging.devops-toolkit.192.168.64.5.nip.io
 
