--- a/apps/devops-toolkit.yaml
+++ b/apps/devops-toolkit.yaml
@@ -15,7 +15,7 @@ spec:
   targetNamespace: devops-toolkit-staging
   values:
     image:
-      tag: 2.9.17
+      tag: 2.9.9
     ingress:
-      host: staging.devops-toolkit.192.168.64.5.nip.io
+      host: staging.devops-toolkit.apps.okd.ag04.io
 
